# storage/api-docs/api-docs.json
@@ -3,9 +3,6 @@
     "info": {
         "title": "L5 OpenApi",
         "description": "L5 Swagger OpenApi description",
-        "contact": {
-            "email": "darius@matulionis.lt"
-        },
         "license": {
             "name": "Apache 2.0",
             "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
@@ -50,6 +47,225 @@
                     },
                     "401": {
                         "description": "Error de autenticación"
+                    }
+                }
+            }
+        },
+        "/api/auth/register": {
+            "post": {
+                "summary": "Registro de usuario",
+                "operationId": "d764dd091cc4494ae0baf360b03319f3",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password",
+                                    "profile_id"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "email",
+                                        "example": "john@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password"
+                                    },
+                                    "profile_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Usuario registrado exitosamente"
+                    },
+                    "422": {
+                        "description": "Error de validación",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/generateReport": {
+            "post": {
+                "summary": "Generar informe de juegos",
+                "operationId": "8657ecd6ac7b1d2b8f57df787043864e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "start_date",
+                                    "finish_date",
+                                    "email"
+                                ],
+                                "properties": {
+                                    "start_date": {
+                                        "type": "string",
+                                        "example": "2022-01-01"
+                                    },
+                                    "finish_date": {
+                                        "type": "string",
+                                        "example": "2022-01-10"
+                                    },
+                                    "email": {
+                                        "type": "email",
+                                        "example": "john@example.com"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Informe generado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "report": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
+                                        },
+                                        "user": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Error de validación",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/createGame": {
+            "post": {
+                "summary": "Crear nuevo juego",
+                "operationId": "5e6f8c4b13b017e68407ec8bec289ab0",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "player_id",
+                                    "start_date",
+                                    "finish_date",
+                                    "points",
+                                    "is_winner",
+                                    "amount_envido",
+                                    "amount_flower"
+                                ],
+                                "properties": {
+                                    "player_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "start_date": {
+                                        "type": "string",
+                                        "example": "2022-01-01"
+                                    },
+                                    "finish_date": {
+                                        "type": "string",
+                                        "example": "2022-01-10"
+                                    },
+                                    "points": {
+                                        "type": "integer",
+                                        "example": "100"
+                                    },
+                                    "is_winner": {
+                                        "type": "boolean",
+                                        "example": "true"
+                                    },
+                                    "amount_envido": {
+                                        "type": "integer",
+                                        "example": "3"
+                                    },
+                                    "amount_flower": {
+                                        "type": "integer",
+                                        "example": "2"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Juego creado exitosamente"
+                    },
+                    "422": {
+                        "description": "Error de validación",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/getPlayers": {
+            "get": {
+                "summary": "Obtener jugadores",
+                "operationId": "a1bbc4e0167d0a5cfa0af05c6c4ce234",
+                "responses": {
+                    "200": {
+                        "description": "Lista de jugadores"
                     }
                 }
             }
